# market-analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_database_setup.ipynb  02_first_pipeline.ipynb
src/market_analysis/: __init__.py
src/market_analysis/charts/: __init__.py  candlestick.py  dashboard.py  indicators.py  themes.py
src/market_analysis/data/: __init__.py  history.py  live.py  screeners.py  symbols.py  watchlist.py
src/market_analysis/data/sources/: yahoo.py
src/market_analysis/database/: __init__.py  base.py  crud.py  engine.py  initialize.py  models.py  populate.py  session.py
src/market_analysis/database/models/: __init__.py  bars.py  enums.py  mixins.py  security.py  watchlist.py
src/market_analysis/exceptions/: __init__.py  data.py
src/market_analysis/indicators/: __init__.py  candlestick.py  momentum.py  trend.py  volatility.py  volume.py
src/market_analysis/ml/: __init__.py  dataset.py  features.py  models.py  prediction.py  preprocessing.py  training.py
src/market_analysis/utils/: __init__.py  constants.py  exceptions.py  logging.py  time.py  validation.py
tests/: __init__.py  test_placeholder.py
